--- a/app/views/voice/settings.html.haml
+++ b/app/views/voice/settings.html.haml
@@ -1,4 +1,26 @@
-%h4 
-  Hello
-%p
-  Howdy
+%h4
+  = flash[:notice]
+  = flash[:alert]
+#consume_voice_region
+  = simple_form_for(current_account, :url => settings_path) do |f|
+    - if current_account.api_version.nil?
+      Please publish the application for more configuration options.
+    %p
+      API version: #{current_account.api_version}
+    %div.yui3-g
+      %div.yui3-u-1-4
+        = f.label :consume_phone_number, "Phone number to consume voice:"
+        %br
+        - if !current_account.consume_phone_number.nil?
+          = f.text_field :consume_phone_number, :readonly => true
+          %br
+          %h4
+          %br
+        - else
+          = f.text_field :consume_phone_number, :readonly => true, :value => "N/A"
+          #generate_consume_phone_number_region
+            %p Enter area code to generate phone number for consuming SMS:
+            = text_field_tag :area_code, params[:area_code], :size => 3
+            = link_to "Generate", generate_consume_phone_number_path, :remote => true
+      %div.yui3-u-1-4
+        = f.button :submit, "Update Account"
