--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>VoiceExtension</title>
   <%= stylesheet_link_tag    "application" %>
-  <%= stylesheet_link_tag "http://static.twilio.com/libs/twiliojs/1.0/twilio.js" %>
+  <%= javascript_include_tag "http://static.twilio.com/libs/twiliojs/1.0/twilio.js" %>
   <%= stylesheet_link_tag (request.ssl? ? 'https' : 'http') + '://yui.yahooapis.com/combo?3.4.1/build/cssreset/reset-min.css&3.4.1/build/cssfonts/fonts-min.css&3.4.1/build/cssgrids/grids-min.css' %>
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" %>
   <%= stylesheet_link_tag (request.ssl? ? 'https' : 'http') + '://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css' %>
   <%= chameleon_stylesheet_link %>
   <%= stylesheet_link_tag    "voice" %>
