--- a/app/views/voice_extension/menu_options/show.html.haml
+++ b/app/views/voice_extension/menu_options/show.html.haml
@@ -1,9 +1,13 @@
+= javascript_include_tag "voice_extension/application"
+
 = link_to "Go back to settings", settings_path
 %br
 %br
 #menu_option
-  = @menu_option.name
-  \- #{@menu_option.format}
+  %strong
+    = @menu_option.name
+    \- #{@menu_option.format}
+  
 %br
-= link_to "Edit", edit_account_menu_option_path(current_account, @menu_option)
-= link_to "Delete", [current_account, @menu_option], :method => :delete, :confirm => "Are you sure you want to delete this menu option?"
+
+
