WIP: Add keyed_value field to menu_options to represent what the user can press; made name on pages unique.

--- a/app/views/voice_extension/menu_options/_form.html.haml
+++ b/app/views/voice_extension/menu_options/_form.html.haml
@@ -2,6 +2,7 @@
   .form-inputs
     = f.error :base
     = f.error_notification
+    = f.input :keyed_value
     = f.input :name
     = f.input :format
     = f.label "Pick a page to transition to:"
