--- a/app/views/voice_extension/pages/new.html.haml
+++ b/app/views/voice_extension/pages/new.html.haml
@@ -1,4 +1,13 @@
-= link_to "Go back to settings", settings_path
+%ul.breadcrumb
+  %li
+    = link_to 'Home', main_app.admin_root_path
+    %span.divider /
+  %li
+    = link_to 'Extensions', main_app.admin_extensions_path
+    %span.divider /
+  %li 
+    = link_to 'Voice Extension', settings_path
+    %span.divider /
 %br
 %br
 = render :partial => "form", :locals => { :page => @page }
