--- a/app/views/voice_extension/pages/_form.html.haml
+++ b/app/views/voice_extension/pages/_form.html.haml
@@ -3,5 +3,6 @@
     = f.error :base
     = f.error_notification
     = f.input :name
+    = f.input :root, as: :boolean
   .form-actions
     = f.button :submit, {class: 'btn btn-primary'}
