--- a/app/views/voice_extension/menu_options/_form.html.haml
+++ b/app/views/voice_extension/menu_options/_form.html.haml
@@ -4,7 +4,8 @@
     = f.error_notification
     = f.input :keyed_value
     = f.input :name
-    = f.input :format
+    = f.label :format, "Text to voice out"
+    = f.input :format 
     = f.label "Pick a page to transition to:"
     - @pages.each do |page|
       = label_tag '', class: 'radio' do
@@ -13,5 +14,13 @@
         - else
           = radio_button_tag "forward_page_transition", page.id.to_s, false
         = page.name.to_s
+    = f.label "Pick an object definition (optional)"
+    - @available_object_definitions.each do |object|
+      = label_tag '', class: 'radio' do
+        - if menu_option.object_definition && (object.to_s == menu_option.object_definition.name)
+          = radio_button_tag "object_definition", object.to_s, true
+        - else
+          = radio_button_tag "object_definition", object.to_s, false
+        = object.to_s
   .form-actions
     = f.button :submit, {class: 'btn btn-primary'}
