--- a/app/views/voice_extension/pages/_form.html.haml
+++ b/app/views/voice_extension/pages/_form.html.haml
@@ -4,5 +4,17 @@
     = f.error_notification
     = f.input :name
     = f.input :root, as: :boolean
+    = f.input :text_to_voice, as: :text
+    = f.label "Pick an object definition (optional)"
+    = label_tag '', class: 'radio' do
+      = radio_button_tag "object_definition", "none", false
+      = "None"
+    - @available_object_definitions.each do |object|
+      = label_tag '', class: 'radio' do
+        - if page.object_definition && (object.to_s == page.object_definition.name)
+          = radio_button_tag "object_definition", object.to_s, true
+        - else
+          = radio_button_tag "object_definition", object.to_s, false
+        = object.to_s
   .form-actions
     = f.button :submit, {class: 'btn btn-primary'}
