Set twilio voice url when configuring the extension.

--- a/app/views/voice_extension/settings/index.html.haml
+++ b/app/views/voice_extension/settings/index.html.haml
@@ -23,7 +23,7 @@
 %br
 = form_tag modify_settings_path do
   = label_tag "Twilio phone number"
-  = text_field_tag :twilio_phone_number, @twilio_phone_number
+  = text_field_tag :consume_phone_number, @consume_phone_number
   %br
   = label_tag "Consume URL"
   = text_field_tag :consume_url, @consume_url
