[#45067205] overhauled admin templates for bootstrap, usability

--- a/app/views/voice_extension/menu_options/index.html.haml
+++ b/app/views/voice_extension/menu_options/index.html.haml
@@ -5,8 +5,17 @@
   %li
     = link_to 'Extensions', main_app.admin_extensions_path
     %span.divider /
-  %li.active Voice Extensions
-  
+  %li
+    = link_to 'IVR Extension', settings_path
+    %span.divider /
+  %li
+    = link_to 'Pages', pages_path
+    %span.divider /
+  %li
+    = link_to @menu_options.page.name, @page
+    %span.divider /
+  %li.active Edit
+
 .alert.alert-info
   %h1 Voice Extensions
   %p Manage voice extension settings.
