--- a/app/views/voice_extension/pages/new.html.haml
+++ b/app/views/voice_extension/pages/new.html.haml
@@ -5,9 +5,15 @@
   %li
     = link_to 'Extensions', main_app.admin_extensions_path
     %span.divider /
-  %li 
-    = link_to 'Voice Extension', settings_path
+  %li
+    = link_to 'IVR Extension', settings_path
     %span.divider /
-%br
-%br
+  %li
+    = link_to 'Pages', pages_path
+    %span.divider /
+  %li.active New
+
+.page-header
+  %h1 New Page
+
 = render :partial => "form", :locals => { :page => @page }
