--- a/app/views/voice_extension/menu_options/_form.html.haml
+++ b/app/views/voice_extension/menu_options/_form.html.haml
@@ -1,18 +1,20 @@
-= simple_form_for([@page, menu_option]) do |f|
+= simple_form_for([@page, menu_option], html: {class: 'form-horizontal'}) do |f|
   .form-inputs
     = f.error :base
     = f.error_notification
     = f.input :keyed_value
     = f.input :name
-    = f.label :format, "Text to voice out"
-    = f.input :format 
-    = f.label "Pick a page to transition to:"
-    - @pages.each do |page|
-      = label_tag '', class: 'radio' do
-        - if !menu_option.forward_page.blank? && (page == menu_option.forward_page)
-          = radio_button_tag "forward_page_transition", page.id.to_s, true
-        - else
-          = radio_button_tag "forward_page_transition", page.id.to_s, false
-        = page.name.to_s
+    = f.input :format, label: 'Text to voice out format'
+    .control-group
+      = f.label "Transition to page:"
+      .controls
+        - @pages.each do |page|
+          = label_tag '', class: 'radio' do
+            - if !menu_option.forward_page.blank? && (page == menu_option.forward_page)
+              = radio_button_tag "forward_page_transition", page.id.to_s, true
+            - else
+              = radio_button_tag "forward_page_transition", page.id.to_s, false
+            = page.name.to_s
   .form-actions
     = f.button :submit, {class: 'btn btn-primary'}
+    = link_to 'Cancel', @page, class: 'btn'
