--- a/app/views/voice_extension/menu_options/new.html.haml
+++ b/app/views/voice_extension/menu_options/new.html.haml
@@ -5,12 +5,18 @@
   %li
     = link_to 'Extensions', main_app.admin_extensions_path
     %span.divider /
-  %li 
-    = link_to 'Voice Extension', settings_path
+  %li
+    = link_to 'IVR Extension', settings_path
     %span.divider /
   %li
-    = link_to "#{@page.name}", @page
+    = link_to 'Pages', pages_path
     %span.divider /
-%br
-%br
+  %li
+    = link_to @page.name, @page
+    %span.divider /
+  %li.active New Menu Option
+
+.page-header
+  %h1 New Menu Option
+
 = render :partial => "form", :locals => { :menu_option => @menu_option }
