--- a/app/views/voice_extension/menu_options/_form.html.haml
+++ b/app/views/voice_extension/menu_options/_form.html.haml
@@ -5,9 +5,9 @@
     = f.input :keyed_value
     = f.input :name
     = f.input :format, label: 'Text to voice out format'
-    .control-group
-      = f.label "Transition to page:"
-      .controls
+    .form-group
+      .col-md-3= f.label "Transition to page:"
+      .col-md-9
         - @pages.each do |page|
           = label_tag '', class: 'radio' do
             - if !menu_option.forward_page.blank? && (page == menu_option.forward_page)
@@ -15,8 +15,8 @@
             - else
               = radio_button_tag "forward_page_transition", page.id.to_s, false
             = page.name.to_s
-      %br
-      = link_to "Create new page", new_page_path
+        %br
+        = link_to "Create new page", new_page_path, class: 'btn btn-default btn-sm'
   .form-actions
     = f.button :submit, {class: 'btn btn-primary'}
     = link_to 'Cancel', @page, class: 'btn'
