--- a/app/views/voice_extension/pages/index.html.haml
+++ b/app/views/voice_extension/pages/index.html.haml
@@ -3,18 +3,18 @@
 %ul.breadcrumb
   %li
     = link_to 'Home', main_app.admin_root_path
-    %span.divider /
+    
   %li
     = link_to 'Extensions', main_app.admin_extensions_path
-    %span.divider /
+    
   %li
     = link_to 'IVR Extension', settings_path
-    %span.divider /
+    
   %li.active Pages
 
 .page-header
   %h1 Pages
-  = link_to new_page_path, class: 'btn btn-mini btn-primary' do
+  = link_to new_page_path, class: 'btn btn-xs btn-primary' do
     %i.icon-plus
     Add Page
 
@@ -35,12 +35,12 @@
               %i.icon-ok
           %td
             .btn-group.pull-right
-              = link_to page, class: 'btn btn-mini' do
+              = link_to page, class: 'btn btn-xs' do
                 %i.icon-list-ul
                 Manage Menus
-              = link_to edit_page_path(page), class: 'btn btn-mini' do
+              = link_to edit_page_path(page), class: 'btn btn-xs' do
                 %i.icon-edit
                 Edit
-              = link_to page, method: :delete, class: 'btn btn-mini', data: {confirm: 'Are you sure?'} do
+              = link_to page, method: :delete, class: 'btn btn-xs', data: {confirm: 'Are you sure?'} do
                 %i.icon-remove
                 Delete
