--- a/app/views/voice_extension/settings/index.html.haml
+++ b/app/views/voice_extension/settings/index.html.haml
@@ -21,7 +21,7 @@
     %hr
     = link_to pages_path, class: 'btn btn-lg btn-primary' do
       Configure Pages
-      %i.icon-circle-arrow-right
+      %i.fa.fa-arrow-circle-o-right
     %hr
   .col-md-4
     .well
