--- a/app/views/voice_extension/pages/show.html.haml
+++ b/app/views/voice_extension/pages/show.html.haml
@@ -19,7 +19,7 @@
 .page-header.clearfix
   %h1= @page.name
   = link_to edit_page_path(@page), class: 'btn' do
-    %i.icon-edit
+    %i.fa.fa-pencil
     Edit page
 
 - if @menu_options.size == 0
@@ -29,7 +29,7 @@
     = link_to 'Add a menu option', new_page_menu_option_path([@page, @menu_option]), class: 'btn btn-xs'
 - else
   = link_to new_page_menu_option_path([@page, @menu_option]), class: 'btn btn-xs btn-primary' do
-    %i.icon-plus
+    %i.fa.fa-plus
     Add menu option
   %hr
   %table.table.table-striped
@@ -53,8 +53,8 @@
           %td
             .btn-group.pull-right
               = link_to edit_page_menu_option_path(@page, option), class: 'btn btn-xs' do
-                %i.icon-edit
+                %i.fa.fa-pencil
                 Edit
               = link_to [@page, option], method: :delete, class: 'btn btn-xs', data: {confirm: 'Are you sure?'} do
-                %i.icon-remove
+                %i.fa.fa-trash-o
                 Delete
